--- a/otros.html
+++ b/otros.html
@@ -90,7 +90,7 @@
                 <div id="BaldeAntiDerrames" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
                     <a href="" data-target="#modalBaldeAntiDerrames" data-toggle="modal">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/BajoSurtidor1.png" class="card-img" alt="...">
+                            <img src="assets/img/productos/balde antiderrames (1).png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
                                 <div class="container">
                                     <div class="row text-right">
@@ -108,7 +108,7 @@
                 <div id="RepuestoDeTapa" class="col-12 col-md-6 offset-md-3 offset-lg-0 col-lg-4 pb-0  form-group">
                     <a href="" data-target="#modalRepuestoDeTapa" data-toggle="modal">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/valvula Simple.png" class="card-img" alt="...">
+                            <img src="assets/img/productos/RepuestoDeTapa.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
                                 <div class="container">
                                     <div class="row text-right">
@@ -320,16 +320,16 @@
                                             </ol>
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
-                                                <img src="assets/img/productos/BajoSurtidor1.png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                                <img src="assets/img/productos/balde antiderrames (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor2.png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                                <img src="assets/img/productos/balde antiderrames (3).png" class="d-block w-100 mr-auto ml-auto" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor3.png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                                <img src="assets/img/productos/balde antiderrames (1).png" class="d-block w-100 mr-auto ml-auto" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor4.png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                                <img src="assets/img/productos/balde antiderrames (4).png" class="d-block w-100 mr-auto ml-auto" alt="...">
                                             </div>
                                         </div>
                                         </div>
