--- a/Valvulas-De-Retencion.html
+++ b/Valvulas-De-Retencion.html
@@ -145,26 +145,26 @@
                         <div class="form-row">
                             <div class="col-12 col-lg-5 offset-lg-1 mb-1">
                                 <span class="badge  badge-primary mb-1 ">
-                                    <label for="nombre">Nombre</label> 
-                                </span>                              
+                                    <label for="nombre">Nombre</label>
+                                </span>
                                 <input type="text" name="nombre" class="form-control">
                             </div>
                             <div class="col-12 col-lg-5 mb-1">
                                 <span class="badge  badge-primary mb-1 ">
-                                    <label for="apellido">Apellido</label> 
-                                </span>                                      
-                                <input type="text" name="apellido" class="form-control" >
+                                    <label for="apellido">Apellido</label>
+                                </span>
+                                <input type="text" name="apellido" class="form-control">
                             </div>
                             <div class="col-12 col-lg-5 offset-lg-1 mb-1">
                                 <span class="badge  badge-primary mb-1 ">
-                                    <label for="email">E-Mail</label> 
-                                </span>     
+                                    <label for="email">E-Mail</label>
+                                </span>
                                 <input type="text" name="email" class="form-control">
                             </div>
                             <div class="col-12 col-lg-7 offset-lg-1 form-group">
                                 <span class="badge  badge-primary mb-1 ">
-                                    <label for="asunto">Asunto</label> 
-                                </span>     
+                                    <label for="asunto">Asunto</label>
+                                </span>
                                 <input type="text" name="asunto" class="form-control">
                             </div>
                             <div class="col-12 col-lg-10 offset-lg-1">
@@ -247,10 +247,25 @@
                                         <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active">
                                         </li>
                                         <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                                        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                                        <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                                        <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
                                     </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
                                             <img src="assets/img/productos/valvula Pie 1.png"
+                                                class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="assets/img/productos/valvula Pie (3).png"
+                                                class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="assets/img/productos/valvula Pie (4).png"
+                                                class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="assets/img/productos/valvula Pie (5).png"
                                                 class="d-block w-100 ml-auto mr-auto" alt="...">
                                         </div>
                                         <div class="carousel-item">
