--- a/index.html
+++ b/index.html
@@ -69,11 +69,7 @@
                         <img src="assets/img/Hero/valvulasDeRetencion.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/img/hero/portadaPicos.png" class="d-block w-100" alt="...">
-                    </div>
-
-                    <div class="carousel-item">
-                        <img src="assets/img/portadas/portada valvulas.png" class="d-block w-100" alt="...">
+                        <img src="assets/img/Hero/surtidores.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <div class="overlay carousel-caption">
@@ -176,7 +172,7 @@
                 <div id="Otros" class="col-12 col-md-6 offset-md-3 col-lg-4 offset-lg-0  form-group">
                     <a href="otros.html">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/portadas/portada valvulas.png" class="card-img" alt="...">
+                            <img src="assets/img/portadas/portadaOtros.png" class="card-img" alt="...">
                             <div class="card-img-overlay">
                                 <div class="container">
                                     <div class="row align-items-center">
@@ -338,7 +334,6 @@
             </div>
         </div>
     </section> -->
-
     <!-- /Pantalla de Carga -->
 
 
