--- a/picos-Dispensadores.html
+++ b/picos-Dispensadores.html
@@ -427,6 +427,7 @@
                                             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
                                             <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
                                             <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+                                            <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
                                         </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
@@ -440,6 +441,9 @@
                                         </div>
                                         <div class="carousel-item ">
                                             <img src="assets/img/productos/funda gris.png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item ">
+                                            <img src="assets/img/productos/funda amarilla.png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                         </div>
                                         <div class="carousel-item ">
                                             <img src="assets/img/productos/funda azul.png" class="d-block w-100 ml-auto mr-auto" alt="...">
